[gd_scene load_steps=2 format=3 uid="uid://b1q6ao3gypc2w"]

[ext_resource type="Script" path="res://Scripts/menus/pause_ui.gd" id="1_4qdq5"]

[node name="pause_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4qdq5")

[node name="background" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.745098)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -6999.01
offset_top = -3186.69
offset_right = -4462.01
offset_bottom = -1749.69
grow_horizontal = 0
scale = Vector2(500, 500)
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.764706, 0.764706, 0.764706, 1)

[node name="pasue_menu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.5
offset_top = -161.5
offset_right = 156.5
offset_bottom = 161.5
grow_horizontal = 2
grow_vertical = 2

[node name="pasue _menu_container" type="VBoxContainer" parent="pasue_menu"]
layout_mode = 2

[node name="pasue_label" type="Label" parent="pasue_menu/pasue _menu_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "PAUSED"

[node name="pasue_menu_spliter" type="VSeparator" parent="pasue_menu/pasue _menu_container"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="pause_resume" type="Button" parent="pasue_menu/pasue _menu_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Resume"

[node name="pause_menu" type="Button" parent="pasue_menu/pasue _menu_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Menu"

[node name="pasue_quit" type="Button" parent="pasue_menu/pasue _menu_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Quit"

[connection signal="pressed" from="pasue_menu/pasue _menu_container/pause_resume" to="." method="_on_pause_resume_pressed"]
[connection signal="pressed" from="pasue_menu/pasue _menu_container/pause_menu" to="." method="_on_pause_menu_pressed"]
[connection signal="pressed" from="pasue_menu/pasue _menu_container/pasue_quit" to="." method="_on_pasue_quit_pressed"]
